fixes logo on mobile;

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -33,6 +33,7 @@ a:focus {
 }
 
 .logo img {
+  width: 100%;
   max-width: 345px;
 }
 
