--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -38,6 +38,7 @@ a {
 
 .logo  {
     img {
+        width: 100%;
         max-width: 345px;
     }
 }
